--- a/index.html
+++ b/index.html
@@ -12,21 +12,27 @@
             justify-content: center;
             min-height: 100vh;
             align-items: center;
+            background-color: azure;
+            background-image: linear-gradient(to top, rgba(255,205,25,0), rgba(255,251,25,0.5), rgba(35,350,450,1));
         }
 
         div {
             width: 500px;
             height: 500px;
-            border: 10px solid black;
+            border: 5px solid black;
+            border-radius: 10px;
+            background-image: linear-gradient(to bottom, rgba(255,205,25,0), rgba(255,251,25,0.5));
         }
 
         h1 {
             width: 200px;
             height: 40px;
-            border: 5px solid grey;
+            border: 2px solid black;
             color: black;
             margin: 0;
             text-align: center;
+            border-radius: 10px;
+            background-image: linear-gradient(to bottom, rgba(255,205,25,0), rgba(255,251,25,0.5));
         }
     </style>
 </head>
